...
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
...
