<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/titleText"
...
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/change_username"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/cryptoSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <Spinner
        android:id="@+id/cryptoSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:entries="@array/crypto_array"
        app:layout_constraintBottom_toTopOf="@+id/giftAmountEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        app:layout_constraintVertical_chainStyle="spread" />

...
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/amount_to_gift"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/recipientEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cryptoSpinner" />

    <EditText
        android:id="@+id/recipientEditText"
...
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/recipients_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/usernameValidText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giftAmountEditText" />

    <TextView
        android:id="@+id/usernameValidText"
...
